feat(students): implement listing all students
